--- a/students/samantha-brake.html
+++ b/students/samantha-brake.html
@@ -14,12 +14,11 @@
           <img class="learn-logo" src="https://s3.amazonaws.com/learn-verified/logo.png"/>
         </a>
       </header>
-      <div class="profile-banner" id="joe-burgess-cover"></div>
+      <div class="profile-banner" id="samantha-brake-cover"></div>
       <div class="vitals-container">
-        <div class="profile-photo" id="joe-burgess-card"></div>
+        <div class="profile-photo" id="samantha-brake-card"></div>
         <div class="social-icon-container">
-          <a href="https://twitter.com/jmburges"><img class="social-icon" src="https://s3.amazonaws.com/learn-verified/twitter-icon.png"/></a>
-          <a href="https://www.linkedin.com/in/jmburges"><img class="social-icon" src="https://s3.amazonaws.com/learn-verified/linkedin-icon.png"/></a>
+          <a href="https://www.linkedin.com/in/samantha-brake-14717b1a/"><img class="social-icon" src="https://s3.amazonaws.com/learn-verified/linkedin-icon.png"/></a>
           <a href="https://github.com/jmburges"><img class="social-icon" src="https://s3.amazonaws.com/learn-verified/github-icon.png"/></a>
           <a href="http://joemburgess.com/"><img class="social-icon" src="https://s3.amazonaws.com/learn-verified/rss-icon.png"/></a>
         </div>
