--- a/students/samantha-brake.html
+++ b/students/samantha-brake.html
@@ -19,7 +19,7 @@
         <div class="profile-photo" id="samantha-brake-card"></div>
         <div class="social-icon-container">
           <a href="https://www.linkedin.com/in/samantha-brake-14717b1a/"><img class="social-icon" src="https://s3.amazonaws.com/learn-verified/linkedin-icon.png"/></a>
-          <a href="https://github.com/jmburges"><img class="social-icon" src="https://s3.amazonaws.com/learn-verified/github-icon.png"/></a>
+          <a href="https://github.com/sammy-brake"><img class="social-icon" src="https://s3.amazonaws.com/learn-verified/github-icon.png"/></a>
         </div>
         <div class="vitals-text-container">
           <h1 class="profile-name">Joe Burgess</h1>
