automatically backed up by learn

--- a/students/samantha-brake.html
+++ b/students/samantha-brake.html
@@ -22,8 +22,8 @@
           <a href="https://github.com/sammy-brake"><img class="social-icon" src="https://s3.amazonaws.com/learn-verified/github-icon.png"/></a>
         </div>
         <div class="vitals-text-container">
-          <h1 class="profile-name">Joe Burgess</h1>
-          <h2 class="profile-location">New York, NY</h2>
+          <h1 class="profile-name">Samantha Brake</h1>
+          <h2 class="profile-location">Kansas City, MO</h2>
           <div class="profile-quote">"Reduce to a previously solved problem"</div>
         </div>
       </div>
