automatically backed up by learn

--- a/students/samantha-brake.html
+++ b/students/samantha-brake.html
@@ -24,7 +24,7 @@
         <div class="vitals-text-container">
           <h1 class="profile-name">Samantha Brake</h1>
           <h2 class="profile-location">Kansas City, MO</h2>
-          <div class="profile-quote">"Reduce to a previously solved problem"</div>
+          <div class="profile-quote">"Hi"</div>
         </div>
       </div>
       <div class="details-container">
