--- a/students/samantha-brake.html
+++ b/students/samantha-brake.html
@@ -34,7 +34,7 @@
               <h3>Biography</h3>
             </div>
             <div class="description-holder">
-              <p>I grew up outside of the Washington DC (NoVA!) and went to college at Carnegie Mellon University in Pittsburgh. After college, I worked as an Oracle consultant for IBM for a bit and now I teach here at The Flatiron School.</p>
+              <p>I grew up in small towns in Kansas, although I'm definitely a city girl.  I'm currently teaching high school biology, but I want to turn my coding hobby into my next career.</p>
             </div>
           </div>
         </div>
