automatically backed up by learn

--- a/students/samantha-brake.html
+++ b/students/samantha-brake.html
@@ -44,8 +44,8 @@
               <h3>Education</h3>
             </div>
             <div class="description-holder">
-              <h4>Carnegie Mellon University</h4>
-              <h5>Bachelor of Science in Information Systems and Economics</h5>
+              <h4>Avila University</h4>
+              <h5>Master's Certification in Education</h5>
             </div>
           </div>
         </div>
