automatically backed up by learn

--- a/students/samantha-brake.html
+++ b/students/samantha-brake.html
@@ -56,7 +56,7 @@
             </div>
             <div class="description-holder">
               <h4>The Flatiron School</h4>
-              <h5>Lead iOS Instructor</h5>
+              <h5>Student</h5>
             </div>
             <div class="description-holder">
               <h4>IBM</h4>
