--- a/students/samantha-brake.html
+++ b/students/samantha-brake.html
@@ -52,15 +52,15 @@
         <div class="experience-block details-block">
           <div class="experience-content content-holder">
             <div class="title-holder">
-              <h3>Experience</h3>
+              <h3>Coding Education</h3>
             </div>
             <div class="description-holder">
               <h4>The Flatiron School</h4>
               <h5>Student</h5>
             </div>
             <div class="description-holder">
-              <h4>IBM</h4>
-              <h5>Consultant</h5>
+              <h4>Free Code Camp</h4>
+              <h5>Responsive Web Design Certification</h5>
             </div>
           </div>
         </div>
