automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </a>
           </div>
           <div class="student-card" id="samantha-brake-card">
-            <a href="students/joe-burgess.html">
+            <a href="students/samantha-brake.html">
               <div class="view-profile-div">
                 <h3 class="view-profile-text">View Profile</h3>
               </div>
