--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
                 <h3 class="view-profile-text">View Profile</h3>
               </div>
               <div class="card-text-container">
-                <h4 class="student-name">Joe Burgess</h4>
-                <p class="student-location">New York, NY</p>
+                <h4 class="student-name">Samantha Brake</h4>
+                <p class="student-location">Kansas City, MO</p>
               </div>
             </a>
           </div>
