--- a/index.html
+++ b/index.html
@@ -31,6 +31,17 @@
               </div>
             </a>
           </div>
+          <div class="student-card" id="samantha-brake-card">
+            <a href="students/samantha-brake.html">
+              <div class="view-profile-div">
+                <h3 class="view-profile-text">View Profile</h3>
+              </div>
+              <div class="card-text-container">
+                <h4 class="student-name">Samantha Brake</h4>
+                <p class="student-location">Kansas City, MO</p>
+              </div>
+            </a>
+          </div>
           <div class="student-card" id="mathieu-balez-card">
             <a href="students/mathieu-balez.html">
               <div class="view-profile-div">
